Initial implementation of Helidon connector for Jakarta REST client (#7039)
* Initial port of connector to use new blocking HTTP client.
* New integration test for the Helidon connector.
* Updated javadoc.
* Removed default encoding test.
* Updated test based on latest connector implementation.
* Improved test with logging and with retry turned off.
* Better control type of HTTP client. Temporarily disable HTTP2 test due to incompatibilities.
* Set timeouts and redirect strategy on WebClient at build time.
* Disable IT tests.
* Linked issues in @Disabled annotations.

---------

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>